rearranged the contact sheet

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -144,7 +144,9 @@
             <div class="row">
               <div class="col-sm">
                 <i class="fa fa-address-book fa-3x" aria-hidden="true"></i>
-                <div class="address"><h5>Address</h5></div>
+                <div class="address">
+                  <h5>Address</h5>
+                </div>
                 <div class="address-text">
                   5400 Leary Avenue Northwest Suite 18,</br>
                   Seattle, Washington, </br>
@@ -153,7 +155,9 @@
               </div>
               <div class="col-sm">
                 <i class="fa fa-phone fa-3x" aria-hidden="true"></i>
-                <div class="phone"><h5>Phone</h5></div>
+                <div class="phone">
+                  <h5>Phone</h5>
+                </div>
                 <div class="phone-text">
 ​                 206-450-5120
                 </div>
@@ -162,7 +166,7 @@
                 <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
                 <div class="email"><h5>Email</h5></div>
                 <div class="email-text">
-                  lisahollowayStylist@gmail.com
+                  lisahollowaystylist@gmail.com
                 </div>
               </div>
             </div>
