landing page draft with layout semi-completed without social media buttons

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -186,6 +186,14 @@
                 </br>
                   </br>
                     </br>
+                  </br>
+                </br>
+                  </br>
+
+    <!-- social media TODO: create social media area here -->
+
+    <!-- end of social media -->
+
 
 
 
