button removed link

--- a/front-end/about/about.html
+++ b/front-end/about/about.html
@@ -51,31 +51,32 @@
       <section class="about-lisa">
 
           <span class="headline">
-            <h1>About Lisa</h1>
+            <h1>ABOUT LISA</h1>
           </span>
           <div class="container">
 
-
-          <div class="container">
-              <div class="row">
-                <div class="col-md-4 col-xs-12">
-                  <img src="https://s3-media2.fl.yelpcdn.com/bphoto/Y7XOb6QLPB-Y1NUEeFNIJA/o.jpg" class="col col-lg-2 image-1">
-                </div>
-                <div class="col-md-4 col-xs-12">
-                  <img class="lisa-photo" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" class="col-md-auto">
-                </div>
-                <div class="col-md-4 col-xs-12">
-                  <img src="https://s3-media3.fl.yelpcdn.com/bphoto/htIYwP-WDusMElFuJgfOPw/o.jpg" class="col col-lg-2 image-2">
-                </div>
-              </div>
-          </div>
-
-          <div class="lisa-speciality">
-            <h4>Specializing in balayage, custom colors, color correction, color and brazilian blowouts. </h4>
-          </div>
-
-          <button type="button" class="btn btn-light">View Photos</button>
+          <div class="row">
+            <div class="column">
+              <img src="https://s3-media2.fl.yelpcdn.com/bphoto/Y7XOb6QLPB-Y1NUEeFNIJA/o.jpg" alt="image1" style="width:100%">
+            </div>
+            <div class="column lisa-photo">
+              <img src="https://s3-media2.fl.yelpcdn.com/bphoto/Y7XOb6QLPB-Y1NUEeFNIJA/o.jpg" alt="lisa-photo" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="https://s3-media3.fl.yelpcdn.com/bphoto/htIYwP-WDusMElFuJgfOPw/o.jpg" alt="image-2" style="width:100%">
+            </div>
       </section>
+      <div class="lisa-speciality" style="color: #DB7F8E">
+        Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
+      </div>
+
+      <div class="form-row text-center">
+        <div class="col-12">
+            <button type="submit" class="btn btn-light btn-outline-dark btn-lg"><a class="photo-link" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</a></button>
+        </div>
+     </div>
+
+
 
       <section class="about-description">
 
