about lisa layout closer to finish

--- a/front-end/about/about.html
+++ b/front-end/about/about.html
@@ -20,6 +20,9 @@
 
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Arizonia|Calligraffitti|Crimson+Text|Great+Vibes|Handlee|Homemade+Apple|Kaushan+Script|Libre+Franklin|Meddon|Merienda|Nanum+Myeongjo|Nothing+You+Could+Do|Noto+Serif+KR|Open+Sans:300i|Pacifico|Petit+Formal+Script|Pinyon+Script|Rouge+Script|Ruthie|Satisfy|Waiting+for+the+Sunrise|Yesteryear" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Charmonman|Handlee" rel="stylesheet">
+
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
@@ -66,6 +69,8 @@
               <img src="https://s3-media3.fl.yelpcdn.com/bphoto/htIYwP-WDusMElFuJgfOPw/o.jpg" alt="image-2" style="width:100%">
             </div>
       </section>
+
+
       <div class="lisa-speciality" style="color: #DB7F8E">
         Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
       </div>
@@ -76,64 +81,47 @@
         </div>
      </div>
 
+     <section class="description-text">
+         <div>
+           I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!
+         </div>
 
+         <br>
+
+         <div>
+           I graduated from the Aveda Institute and have attended numerous classes taught by national Aveda educators. I have been dedicated to refining and advancing my skills through advanced training by numerous industry leaders that including  Jon Reyman who is a lead stylist at New York fashion week.  Sally Rogerson who is the former Senior creative director at Vidal Sassoon academy, Los Angeles. I am an advanced Balayage specialist certified through The Business of Balayage and I am also certified as a Brazilian Blowout specialist.
+         </div>
+         <br>
+
+         <div>
+           The atmosphere here is warm, welcoming and relaxed.  Come and see me! I am dedicated to being the best hairstylist and exceeding your expectations!
+         </div>
+         <div class="description">
+
+           <h5>
+             <strong>
+               Book your appointment online
+             </strong>
+           </h5>
+             <p class="description-text-wait"style="color: #DB7F8E">
+               I can't wait to meet you!
+             </p>
+
+         </div>
+         <button type="button" class="btn btn-light btn-outline-dark btn-lg">
+           <a href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE
+           </a>
+         </button>
+
+      </section>
 
       <section class="about-description">
-
-        <div>
-          I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!
-        </div>
-
-        <br>
-
-        <div>
-          I graduated from the Aveda Institute and have attended numerous classes taught by national Aveda educators. I have been dedicated to refining and advancing my skills through advanced training by numerous industry leaders that including  Jon Reyman who is a lead stylist at New York fashion week.  Sally Rogerson who is the former Senior creative director at Vidal Sassoon academy, Los Angeles. I am an advanced Balayage specialist certified through The Business of Balayage and I am also certified as a Brazilian Blowout specialist.
-        </div>
-        <br>
-
-        <div>
-          The atmosphere here is warm, welcoming and relaxed.  Come and see me! I am dedicated to being the best hairstylist and exceeding your expectations!
-        </div>
-        <br>
-
-        <div class="description">
-          <strong>Book your appointment online</strong>
-            <h6>I can't wait to meet you</h6>
-        </div>
-
-          <button type="button" class="btn btn-light">Book Online</button>
-          <button type="button" class="btn btn-light">Call</button>
-
-
 
       </section>
 
 
 
 
-
-
-
-
-
-
-
-
-      </br>
-        </br>
-          </br>
-            </br>
-          </br>
-            </br>
-              </br>
-                </br>
-              </br>
-                </br>
-                  </br>
-                    </br>
-                  </br>
-                </br>
-                  </br>
 
     <!-- social media TODO: create social media area here -->
 
