contact dashed css

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -20,6 +20,9 @@
 
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Arizonia|Calligraffitti|Crimson+Text|Great+Vibes|Handlee|Homemade+Apple|Kaushan+Script|Libre+Franklin|Meddon|Merienda|Nanum+Myeongjo|Nothing+You+Could+Do|Noto+Serif+KR|Open+Sans:300i|Pacifico|Petit+Formal+Script|Pinyon+Script|Rouge+Script|Ruthie|Satisfy|Waiting+for+the+Sunrise|Yesteryear" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Great+Vibes|Nanum+Myeongjo|Pacifico|Playfair+Display" rel="stylesheet">
+
+
 
 
 
@@ -113,6 +116,7 @@
 </section>
 
 
+
 <!-- end of testimonals -->
 
 
@@ -138,39 +142,30 @@
 
         <!-- contact section -->
         <section class="contact">
-          <h1 style="text-align:center">Get In Touch</h1>
-            <h5 style="text-align:center">We'd love to hear from you. Welcoming new cilents...</h5>
-          <div class="container contact-container">
-            <div class="row">
-              <div class="col-sm">
-                <i class="fa fa-address-book fa-3x" aria-hidden="true"></i>
-                <div class="address">
-                  <h5>Address</h5>
-                </div>
-                <div class="address-text">
-                  5400 Leary Avenue Northwest Suite 18,</br>
-                  Seattle, Washington, </br>
-                  98107
-                </div>
-              </div>
-              <div class="col-sm">
-                <i class="fa fa-phone fa-3x" aria-hidden="true"></i>
-                <div class="phone">
-                  <h5>Phone</h5>
-                </div>
-                <div class="phone-text">
-​                 206-450-5120
-                </div>
-              </div>
-              <div class="col-sm">
-                <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
-                <div class="email"><h5>Email</h5></div>
-                <div class="email-text">
-                  lisahollowaystylist@gmail.com
-                </div>
-              </div>
-            </div>
-          </div>
+          <h1 style="text-align:center">
+            Contact
+          </h1>
+
+          <p>
+            New Clients receive $20 off your first visit.
+          </p>
+          <h3>
+            Summer Specials
+          </h3>
+          <p>
+            Brazilian Blowout $350
+          </br> Includes your take home aftercare
+          </br> Brazilian Acai Shampoo, Conditioner and Bonding Spray.
+          </p>
+
+          <p class="address">5400 Leary Avenue Northwest, Suite 18
+          </br>
+          Seattle, Washington 98119
+          </p>
+
+          <p class="email">
+            lisahollowaystylist@gmail.com | 206.450.5120
+          </p>
         </section>
         <!-- end of contact section -->
 
