border radius in contact

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -115,6 +115,10 @@
 
 </section>
 
+<section class="padding">
+
+</section>
+
 
 
 <!-- end of testimonals -->
@@ -123,33 +127,17 @@
 
 
 
-  </br>
-    </br>
-      </br>
-        </br>
-      </br>
-        </br>
-          </br>
-        </br>
-          </br>
-            </br>
-          </br>
-            </br>
-              </br>
-            </br>
-              </br>
-                </br>
 
         <!-- contact section -->
         <section class="contact">
-          <h1 style="text-align:center">
+          <h1 class="contact-title" style="text-align:center">
             Contact
           </h1>
 
-          <p>
+          <p class="new-clients">
             New Clients receive $20 off your first visit.
           </p>
-          <h3>
+          <h3 style="font-family: 'Kaushan Script'""">
             Summer Specials
           </h3>
           <p>
@@ -158,9 +146,11 @@
           </br> Brazilian Acai Shampoo, Conditioner and Bonding Spray.
           </p>
 
-          <p class="address">5400 Leary Avenue Northwest, Suite 18
+          <p class="address">
+            <strong>5400 Leary Avenue Northwest, Suite 18
           </br>
           Seattle, Washington 98119
+            </strong> 
           </p>
 
           <p class="email">
