added breaks in contact section

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -133,10 +133,13 @@
           <h1 class="contact-title" style="text-align:center">
             Contact
           </h1>
+        </br>
 
           <p class="new-clients">
-            New Clients receive $20 off your first visit.
+            NEW CLIENTS RECIEVE $20 OFF YOUR FIRST VISIT.
           </p>
+        </br>
+
           <h3 style="font-family: 'Kaushan Script'""">
             Summer Specials
           </h3>
@@ -145,14 +148,16 @@
           </br> Includes your take home aftercare
           </br> Brazilian Acai Shampoo, Conditioner and Bonding Spray.
           </p>
+        </br>
+
 
           <p class="address">
             <strong>5400 Leary Avenue Northwest, Suite 18
-          </br>
-          Seattle, Washington 98119
-            </strong> 
+            </br>
+              Seattle, Washington 98119
+            </strong>
           </p>
-
+        </br>
           <p class="email">
             lisahollowaystylist@gmail.com | 206.450.5120
           </p>
