all nav bars have links to their respected websites

--- a/front-end/services/services.html
+++ b/front-end/services/services.html
@@ -37,18 +37,18 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav mr-auto nav-fill w-50">
             <li class="nav-item">
-              <a class="nav-link nav-about" href="#">About </a>
+              <a class="nav-link nav-about" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/about/about.html">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-services" href="#">Services</a>
+              <a class="nav-link nav-services" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/services/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-booking" href="#">Booking</a>
+              <a class="nav-link nav-booking" href="https://directory.bookedin.com/lisa-holloway-hair-studio">Booking</a>
             </li>
           </ul>
-
         </div>
       </nav>
+
 
 
       <section class="module parallax parallax-1" data-type="background" data-speed="10">
@@ -110,7 +110,7 @@
           </ul>
       </section>
 
-      
+
 
       <div class="form-row text-center">
           <div class="col-12">
