added spacing on landing page in contact

--- a/front-end/about/about.html
+++ b/front-end/about/about.html
@@ -39,41 +39,56 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav mr-auto nav-fill w-50">
             <li class="nav-item">
-              <a class="nav-link nav-about" href="#">About </a>
+              <a class="nav-link nav-about" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/about/about.html">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-services" href="#">Services</a>
+              <a class="nav-link nav-services" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/services/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-booking" href="#">Booking</a>
+              <a class="nav-link nav-booking" href="https://directory.bookedin.com/lisa-holloway-hair-studio">Booking</a>
             </li>
           </ul>
         </div>
       </nav>
 
+      <section class="padding-1">
+        <h1 class="lisa-title">I'm Lisa...</h1>
+      </section>
       <section class="about-lisa">
 
-          <span class="headline">
-            <h1>ABOUT LISA</h1>
-          </span>
-          <div class="container">
+        <div class="row">
+          <div class="col">
+            <img class="image-lisa" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" alt="">
+          </div>
+          <div class="col description-text">
+            <div>
+              I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!
+            </div>
 
-          <div class="row">
-            <div class="column">
-              <img src="https://s3-media2.fl.yelpcdn.com/bphoto/Y7XOb6QLPB-Y1NUEeFNIJA/o.jpg" alt="image1" style="width:100%">
+            <br>
+
+            <div>
+              I graduated from the Aveda Institute and have attended numerous classes taught by national Aveda educators. I have been dedicated to refining and advancing my skills through advanced training by numerous industry leaders that including  Jon Reyman who is a lead stylist at New York fashion week.  Sally Rogerson who is the former Senior creative director at Vidal Sassoon academy, Los Angeles. I am an advanced Balayage specialist certified through The Business of Balayage and I am also certified as a Brazilian Blowout specialist.
             </div>
-            <div class="column lisa-photo">
-              <img src="https://s3-media2.fl.yelpcdn.com/bphoto/Y7XOb6QLPB-Y1NUEeFNIJA/o.jpg" alt="lisa-photo" style="width:100%">
+            <br>
+
+            <div>
+              The atmosphere here is warm, welcoming and relaxed.  Come and see me! I am dedicated to being the best hairstylist and exceeding your expectations!
             </div>
-            <div class="column">
-              <img src="https://s3-media3.fl.yelpcdn.com/bphoto/htIYwP-WDusMElFuJgfOPw/o.jpg" alt="image-2" style="width:100%">
-            </div>
+          </br>
+          </div>
+        </div>
+        <p class="description-text-wait"style="color: #DB7F8E">
+          I can't wait to meet you!
+        </p>
+        <h1> - Lisa</h1>
       </section>
 
 
-      <div class="lisa-speciality" style="color: #DB7F8E">
-        Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
-      </div>
+
+        <div class="lisa-speciality" style="color: #DB7F8E">
+          Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
+        </div>
 
       <div class="form-row text-center">
         <div class="col-12">
@@ -81,21 +96,8 @@
         </div>
      </div>
 
-     <section class="description-text">
-         <div>
-           I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!
-         </div>
+     <section>
 
-         <br>
-
-         <div>
-           I graduated from the Aveda Institute and have attended numerous classes taught by national Aveda educators. I have been dedicated to refining and advancing my skills through advanced training by numerous industry leaders that including  Jon Reyman who is a lead stylist at New York fashion week.  Sally Rogerson who is the former Senior creative director at Vidal Sassoon academy, Los Angeles. I am an advanced Balayage specialist certified through The Business of Balayage and I am also certified as a Brazilian Blowout specialist.
-         </div>
-         <br>
-
-         <div>
-           The atmosphere here is warm, welcoming and relaxed.  Come and see me! I am dedicated to being the best hairstylist and exceeding your expectations!
-         </div>
          <div class="description">
 
            <h5>
@@ -103,9 +105,7 @@
                Book your appointment online
              </strong>
            </h5>
-             <p class="description-text-wait"style="color: #DB7F8E">
-               I can't wait to meet you!
-             </p>
+
 
          </div>
          <button type="button" class="btn btn-light btn-outline-dark btn-lg">
