--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -22,15 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Arizonia|Calligraffitti|Crimson+Text|Great+Vibes|Handlee|Homemade+Apple|Kaushan+Script|Libre+Franklin|Meddon|Merienda|Nanum+Myeongjo|Nothing+You+Could+Do|Noto+Serif+KR|Open+Sans:300i|Pacifico|Petit+Formal+Script|Pinyon+Script|Rouge+Script|Ruthie|Satisfy|Waiting+for+the+Sunrise|Yesteryear" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Great+Vibes|Nanum+Myeongjo|Pacifico|Playfair+Display" rel="stylesheet">
 
-
-
-
-
-
-
-
-
-
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -48,16 +40,15 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav mr-auto nav-fill w-50">
             <li class="nav-item">
-              <a class="nav-link nav-about" href="#">About </a>
+              <a class="nav-link nav-about" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/about/about.html">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-services" href="#">Services</a>
+              <a class="nav-link nav-services" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/services/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-booking" href="#">Booking</a>
+              <a class="nav-link nav-booking" href="https://directory.bookedin.com/lisa-holloway-hair-studio">Booking</a>
             </li>
           </ul>
-
         </div>
       </nav>
 
@@ -69,13 +60,10 @@
         </div>
       </section>
 
-      </br>
-      </br>
 
 
 <!-- testimonals -->
 <section class="testimonals-section">
-
   <h3 class="customer-testimonals">
     Customer Testimonals...
   </h3>
@@ -83,9 +71,10 @@
   <section class="section-card-1">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h3 class="card-title" style="color: #8c7222">Amalia</h>
+      <h3 class="card-title" style="color: #8c7222">AMALIA</h>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
+
       <p class="card-text">I have been going to Lisa for years and I cannot express enough how incredible she is. She has been my saving grace. Been loyal for years and will continue to see her every chance I get.</p>
     </div>
   </div>
@@ -94,7 +83,7 @@
   <section class="section-card-2">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h3 class="card-title" style="color: #8c7222">Lea</h3>
+      <h3 class="card-title" style="color: #8c7222">LEA</h3>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
       <p class="card-text">I have been going to Lisa for years after discovering her when I first moved to Seattle... I leave feeling great and she always finds a way to create a style that grows out well.I absolutely adore her and cannot imagine going anywhere else.</p>
@@ -105,7 +94,7 @@
   <section class="section-card-3">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h3 class="card-title" style="color: #8c7222">Kim</h3>
+      <h3 class="card-title" style="color: #8c7222">KIM</h3>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
       <p class="card-text">Lisa is the best!I receive compliments galore after Lisa cuts my hair - and her price is unbelievably reasonable for her level of expertise. Plus, she's down to earth, hilarious and fun to talk to.</p>
@@ -164,21 +153,10 @@
         </section>
         <!-- end of contact section -->
 
-      </br>
-        </br>
-          </br>
-            </br>
-          </br>
-            </br>
-              </br>
-                </br>
-              </br>
-                </br>
-                  </br>
-                    </br>
-                  </br>
-                </br>
-                  </br>
+    <section class="padding-2">
+
+    </section>
+
 
     <!-- social media TODO: create social media area here -->
 
