spacing in links for photos and booking is set

--- a/front-end/about/about.html
+++ b/front-end/about/about.html
@@ -91,9 +91,18 @@
         </div>
 
       <div class="form-row text-center">
-        <div class="col-12">
+        <div class="col-6">
             <button type="submit" class="btn btn-light btn-outline-dark btn-lg"><a class="photo-link" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</a></button>
         </div>
+        <div class="col-6">
+          <button type="button" class="btn btn-light btn-outline-dark btn-lg">
+            <a href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE
+            </a>
+          </button>
+        </div>
+
+
+
      </div>
 
      <section>
@@ -108,14 +117,15 @@
 
 
          </div>
-         <button type="button" class="btn btn-light btn-outline-dark btn-lg">
-           <a href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE
-           </a>
-         </button>
+
 
       </section>
 
       <section class="about-description">
+
+      </section>
+
+      <section class="padding-footing">
 
       </section>
 
