--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -26,14 +26,13 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-
     <title>Lisa Holloway Stylist</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
         <a class="navbar-brand" class="logo-name">LH</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"  aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -108,15 +107,7 @@
 
 </section>
 
-
-
 <!-- end of testimonals -->
-
-
-
-
-
-
         <!-- contact section -->
         <section class="contact">
           <h1 class="contact-title" style="text-align:center">
@@ -132,7 +123,7 @@
           <h3 style="font-family: 'Kaushan Script'""">
             Summer Specials
           </h3>
-          <p>
+          <p class="summer-specials">
             Brazilian Blowout $350
           </br> Includes your take home aftercare
           </br> Brazilian Acai Shampoo, Conditioner and Bonding Spray.
@@ -158,11 +149,32 @@
     </section>
 
 
-    <!-- social media TODO: create social media area here -->
+    <section>
+      <div class="lisa-speciality" style="color: #DB7F8E">
+        Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
+      </div>
 
-    <!-- end of social media -->
+     <div class="description">
+
+       <h5>
+         <strong>
+           Book your appointment online
+         </strong>
+       </h5>
+     </div>
+   </div>
+
+   <div class="groups-buttons">
+    <a href="#" class="photo-link-1" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</a>
+    <a href="#" class="photo-link-2" href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE</a>
+  </div>
+
+</section>
 
 
+<section class="padding-footing">
+
+</section>
 
 
     <!-- footer -->
