--- a/front-end/test.html
+++ b/front-end/test.html
@@ -4,75 +4,35 @@
     <meta charset="utf-8">
     <title>Test</title>
     <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="landing-page.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
+    </script>
+
   </head>
   <body>
+    <div id="top" class="container">
+
+    <div class="fixed">
+    <div class="bg transition"></div>
+
+  <ul>
+    <li>One</li>
+    <li>Two</li>
+    <li>Three</li>
+    <li>Four</li>
+    <li>Five</li>
+  </ul>
 
 
 
-
-    <section class="module parallax parallax-1" data-type="background" data-speed="10">
-      <div class="parallax-container">
-        <h1 class="lisa-holloway-title">Lisa Holloway</h1>
-        <h3 class="professional-hair-stylist" style="text-align: center">Professional Hair Stylist</h3>      </div>
-    </section>
-
-    <section  class="module content">
-    <div class="parallax-container">
-    <h2>Lorem Ipsum Dolor</h2>
-    <p>Lorem ipsum dolor...</p>
     </div>
-    </section>
-
-    <section class="module parallax parallax-2" data-type="background" data-speed="10">
-    <div class="parallax-container">
-    <h1>Shape</h1>
-    </div>
-    </section>
-
-    <section class="module content">
-    <div class="parallax-container">
-    <h2>Lorem Ipsum Dolor</h2>
-    <p>Lorem ipsum dolor...</p>
-    </div>
-    </section>
-
-    <section class="module parallax parallax-3" data-type="background" data-speed="10">
-    <div class="parallax-container">
-    <h1>Color</h1>
-    </div>
-    </section>
-
-    <section class="module content">
-    <div class="parallax-container">
-    <h2>Lorem Ipsum Dolor</h2>
-    <p>Lorem ipsum dolor...</p>
-    </div>
-    </section>
-    <footer class="footer">
-      <div class="container-fluid bg-primary">
-        <div class="row">
-          <div class="col-xs-6 col-md-4 left">
-    <p>&copy; MySite.com</p>
-        </div>
-          <div class="col-xs-6 col-md-4 left">
-    <a href="#">Terms &amp;Conditions</a>
-    <a href="#">About Us</a>
-        </div>
-          <div class="col-xs-6 col-md-4 right">
-    <a href="#" class="btn btn-social-icon btn-twitter">
-    <span class="fa fa-twitter"></span>
-    </a>
-    <a href="#" class="btn btn-social-icon btn-facebook">
-    <span class="fa fa-facebook"></span>
-    </a>
-        <a href="#" class="btn btn-social-icon btn-instagram">
-    <span class="fa fa-instagram"></span>
-    </a>
-        </div>
-        </div>
-    </div>
-    </footer>
 
 
-  </body>
+  </div>
+  <script src="test.js">
+
+  </script>
+</body>
 </html>
