buttons are centered

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -165,9 +165,10 @@
    </div>
 
    <div class="groups-buttons">
-    <a href="#" class="photo-link-1" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</a>
-    <a href="#" class="photo-link-2" href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE</a>
+    <button href="#" class="photo-link-1 btn btn-outline-dark" type="button" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</button>
+    <button href="#" class="photo-link-2 btn btn-outline-dark" href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE</button>
   </div>
+
 
 </section>
 
