link on button added

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -165,8 +165,8 @@
    </div>
 
    <div class="groups-buttons">
-    <button href="#" class="photo-link-1 btn btn-outline-dark" type="button" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</button>
-    <button href="#" class="photo-link-2 btn btn-outline-dark" href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE</button>
+    <button onclick="location.href='https://plus.google.com/u/0/collection/k7INaB'" class="btn btn-outline-dark" type="button">VIEW PHOTOS</button>
+    <button href="#" class="btn btn-outline-dark" onclick="location.href='https://directory.bookedin.com/lisa-holloway-hair-studio'">BOOK ONLINE</button>
 
   </div>
 
