footer is pushed down to the bottom

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -116,12 +116,13 @@
         </br>
 
           <p class="new-clients">
-            NEW CLIENTS RECIEVE $20 OFF YOUR FIRST VISIT.
+            NEW CLIENTS RECIEVE
+          </br>
+          $20 OFF YOUR FIRST VISIT.
           </p>
-        </br>
 
           <h3 style="font-family: 'Kaushan Script'""">
-            Summer Specials
+            Specials
           </h3>
           <p class="summer-specials">
             Brazilian Blowout $350
@@ -149,7 +150,7 @@
     </section>
 
 
-    <section>
+    <section class="connect-section">
       <div class="lisa-speciality" style="color: #DB7F8E">
         Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
       </div>
