landing page put decently, font & color not finished

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -151,8 +151,12 @@
 
 
     <section class="connect-section">
-      <div class="lisa-speciality" style="color: #DB7F8E">
-        Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
+      <div class="lisa-speciality" style="color: black">
+        Specializing in...
+      </br>
+       Balayage, Custom Colors, Color Correction
+     </br>
+     Color & Brazilian Blowouts.
       </div>
 
      <div class="description">
