accordian is working in services, had to scrap from beginning

--- a/front-end/about/about.html
+++ b/front-end/about/about.html
@@ -78,56 +78,45 @@
           </br>
           </div>
         </div>
+
+
         <p class="description-text-wait"style="color: #DB7F8E">
           I can't wait to meet you!
+          <h1> - Lisa</h1>
         </p>
-        <h1> - Lisa</h1>
+
       </section>
 
 
-
-        <div class="lisa-speciality" style="color: #DB7F8E">
-          Specializing in Balayage, Custom Colors, Color Correction, Color and Brazilian Blowouts.
+      <section class="connect-section">
+        <div class="lisa-speciality" style="color: black">
+          Specializing in...
+        </br>
+         Balayage, Custom Colors, Color Correction
+       </br>
+       Color & Brazilian Blowouts.
         </div>
 
-      <div class="form-row text-center">
-        <div class="col-6">
-            <button type="submit" class="btn btn-light btn-outline-dark btn-lg"><a class="photo-link" href="https://plus.google.com/u/0/collection/k7INaB">VIEW PHOTOS</a></button>
-        </div>
-        <div class="col-6">
-          <button type="button" class="btn btn-light btn-outline-dark btn-lg">
-            <a href="https://directory.bookedin.com/lisa-holloway-hair-studio">BOOK ONLINE
-            </a>
-          </button>
-        </div>
+       <div class="description">
 
-
-
+         <h5>
+           <strong>
+             Book your appointment online
+           </strong>
+         </h5>
+       </div>
      </div>
 
-     <section>
+     <div class="groups-buttons">
+      <button onclick="location.href='https://plus.google.com/u/0/collection/k7INaB'" class="btn btn-outline-dark" type="button">VIEW PHOTOS</button>
+      <button href="#" class="btn btn-outline-dark" onclick="location.href='https://directory.bookedin.com/lisa-holloway-hair-studio'">BOOK ONLINE</button>
 
-         <div class="description">
+    </div>
+  </section>
 
-           <h5>
-             <strong>
-               Book your appointment online
-             </strong>
-           </h5>
+  <section class="padding-footing">
 
-
-         </div>
-
-
-      </section>
-
-      <section class="about-description">
-
-      </section>
-
-      <section class="padding-footing">
-
-      </section>
+  </section>
 
 
 
