--- a/front-end/test.html
+++ b/front-end/test.html
@@ -36,3 +36,52 @@
   </script>
 </body>
 </html>
+
+
+<section class="haircut-section">
+  <h2>Hair Cut</h2>
+  <div> - </div>
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus justo, maximus quis semper euismod, ornare sed odio. Proin elementum ultricies libero commodo faucibus. Pellentesque iaculis, lectus eu faucibus facilisis, urna eros dictum quam, eu tempor dui odio non risus.</p>
+  </div>
+
+  <ul>
+    <li>Women's Cut</li>
+    <li>Men's Cut</li>
+    <li>Blow Dry and Style</li>
+    <li>Bang Trim</li>
+  </ul>
+</section>
+
+<section class="hair-color-section">
+  <h2>Color</h2>
+
+  <div> - </div>
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus justo, maximus quis semper euismod, ornare sed odio. Proin elementum ultricies libero commodo faucibus. Pellentesque iaculis, lectus eu faucibus facilisis, urna eros dictum quam, eu tempor dui odio non risus.</p>
+
+    <ul>
+      <li>Women's Single Process Color</li>
+      <li>Balayage/Ombre & other</li>
+      <li>Highlights</li>
+      <li>Partial Highlights</li>
+      <li>Bleach & Tone</li>
+      <li>Corrective Color</li>
+      <li>Men's Cut & Color Blend</li>
+    </ul>
+
+</section>
+
+<section class="treatment-section">
+  <h2>Treatment</h2>
+
+  <div> - </div>
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus justo, maximus quis semper euismod, ornare sed odio. Proin elementum ultricies libero commodo faucibus. Pellentesque iaculis, lectus eu faucibus facilisis, urna eros dictum quam, eu tempor dui odio non risus.</p>
+
+    <ul>
+      <li>Brazilian Blowout</li>
+      <li>Brazilian Split End Treatment</li>
+      <li>Glossing Treatment</li>
+    </ul>
+</section>
