--- a/front-end/services/services.html
+++ b/front-end/services/services.html
@@ -6,186 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="services.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- MDB CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
-
-    <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Arizonia|Calligraffitti|Crimson+Text|Great+Vibes|Handlee|Homemade+Apple|Kaushan+Script|Libre+Franklin|Meddon|Merienda|Nanum+Myeongjo|Nothing+You+Could+Do|Noto+Serif+KR|Open+Sans:300i|Pacifico|Petit+Formal+Script|Pinyon+Script|Rouge+Script|Ruthie|Satisfy|Waiting+for+the+Sunrise|Yesteryear" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-
-    <title>Lisa Holloway Stylist Services</title>
+    <title>Hello, world!</title>
   </head>
   <body>
+    <h1>Hello, world!</h1>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
-        <a class="navbar-brand" class="logo-name">LH</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <div class="accordion" id="accordionExample">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h5 class="mb-0">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Collapsible Group Item #1
         </button>
+      </h5>
+    </div>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto nav-fill w-50">
-            <li class="nav-item">
-              <a class="nav-link nav-about" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/about/about.html">About </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link nav-services" href="file:///Users/amaliafergin/galvanize-74/personal/lisa-holloway-stylist/front-end/services/services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link nav-booking" href="https://directory.bookedin.com/lisa-holloway-hair-studio">Booking</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-
-
-      <section class="module parallax parallax-1" data-type="background" data-speed="10">
-        <div class="parallax-container">
-          <h1 class="lisa-holloway-title">Services</h1>
-        </div>
-      </section>
-
-      <p class="scissors-section"style="text-align: center;">
-        <span style="text-align: center; display: inline-block;" class="fa fa-scissors fa-5x" aria-hidden="true">
-        </span>
-      </p>
-
-      <section class="haircut-section">
-        <h2>Hair Cut</h2>
-        <div> - </div>
-        <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus justo, maximus quis semper euismod, ornare sed odio. Proin elementum ultricies libero commodo faucibus. Pellentesque iaculis, lectus eu faucibus facilisis, urna eros dictum quam, eu tempor dui odio non risus.</p>
-        </div>
-
-        <ul>
-          <li>Women's Cut</li>
-          <li>Men's Cut</li>
-          <li>Blow Dry and Style</li>
-          <li>Bang Trim</li>
-        </ul>
-      </section>
-
-      <section class="hair-color-section">
-        <h2>Color</h2>
-
-        <div> - </div>
-        <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus justo, maximus quis semper euismod, ornare sed odio. Proin elementum ultricies libero commodo faucibus. Pellentesque iaculis, lectus eu faucibus facilisis, urna eros dictum quam, eu tempor dui odio non risus.</p>
-
-          <ul>
-            <li>Women's Single Process Color</li>
-            <li>Balayage/Ombre & other</li>
-            <li>Highlights</li>
-            <li>Partial Highlights</li>
-            <li>Bleach & Tone</li>
-            <li>Corrective Color</li>
-            <li>Men's Cut & Color Blend</li>
-          </ul>
-
-      </section>
-
-      <section class="treatment-section">
-        <h2>Treatment</h2>
-
-        <div> - </div>
-        <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus justo, maximus quis semper euismod, ornare sed odio. Proin elementum ultricies libero commodo faucibus. Pellentesque iaculis, lectus eu faucibus facilisis, urna eros dictum quam, eu tempor dui odio non risus.</p>
-
-          <ul>
-            <li>Brazilian Blowout</li>
-            <li>Brazilian Split End Treatment</li>
-            <li>Glossing Treatment</li>
-          </ul>
-      </section>
-
-
-
-      <div class="form-row text-center">
-          <div class="col-12">
-              <button type="button" class="btn btn-outline-dark">Booking</button>
-          </div>
-       </div>
-
-
-
-
-      </br>
-        </br>
-          </br>
-            </br>
-          </br>
-            </br>
-              </br>
-                </br>
-              </br>
-                </br>
-                  </br>
-                    </br>
-                  </br>
-                </br>
-                  </br>
-
-    <!-- social media TODO: create social media area here -->
-
-    <!-- end of social media -->
-
-
-
-
-    <!-- footer -->
-    <footer>
-    <div class="container-fluid bg-primary py-3">
-      <div class="container">
-        <div class="row py-3">
-          <div class="col-md-12 footer-info">
-            <p class="footer-text">Lisa Holloway | 5400 Leary Avenue Northwest | Suite 18 |
-            Seattle 98107 | 206-450-5120  </p>
-            <p>&copy;	Lisa Holloway Hair Stylist | Website By amaliaclaire</p>
-          </div>
-
-        </div>
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
     </div>
-  </footer>
-  <!-- end of footer -->
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Collapsible Group Item #2
+        </button>
+      </h5>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Collapsible Group Item #3
+        </button>
+      </h5>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+  </div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-
-    <!--MDB javascript  -->
-      <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.10/js/mdb.min.js"></script>
-    <script src="services.js">
-
-    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
